@@ -744,6 +744,7 @@ class PyoTableObject(object):
     read(path) : Sets the content of the table from a text file.
     normalize() : Normalize table samples between -1 and 1.
     removeDC() : Remove DC offset from the table's data.
+    reverse() : Reverse the table's data.
     put(value, pos) : Puts a value at specified position in the table.
     get(pos) : Returns the value at specified position in the table.
     
@@ -941,6 +942,14 @@ class PyoTableObject(object):
 
         """
         [obj.removeDC() for obj in self._base_objs]
+        return self
+
+    def reverse(self):
+        """
+        Reverse the table's data.
+
+        """
+        [obj.reverse() for obj in self._base_objs]
         return self
 
     def view(self, title="Table waveform", wxnoserver=False):
