@@ -1,3 +1,8 @@
+2011-12-12 belangeo <belangeo@gmail.com>
+
+    * Added reverse() method to the PyoTableObject.
+    - rev 795
+
 2011-12-11 belangeo <belangeo@gmail.com>
 
     * Added removeDC() method to the PyoTableObject.
